refactor(gateway): transition security filter and rate limiter to functional pipelines